@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: stdfn.c,v 1.9 2001/02/01 17:56:05 broeker Exp $"); }
+static char *RCSid() { return RCSid("$Id: stdfn.c,v 1.10 2001/08/17 13:59:26 broeker Exp $"); }
 #endif
 
 /* GNUPLOT - stdfn.c */
@@ -353,7 +353,6 @@ unsigned int delay;
 *****************************************************************/
 #ifndef HAVE_STRCASECMP
 # ifndef HAVE_STRICMP
-int gp_stricmp __PROTO((char *, char *));
 
 /* return (see MSVC documentation and strcasecmp()):
  *  -1  if str1 < str2
@@ -391,13 +390,12 @@ gp_stricmp(s1, s2)
 
 #ifndef HAVE_STRNCASECMP
 # ifndef HAVE_STRNICMP
-int gp_strnicmp __PROTO((char *, char *, int));
 
 int
 gp_strnicmp(s1, s2, n)
     const char *s1;
     const char *s2;
-    int n;
+    size_t n;
 {
     unsigned char c1, c2;
 
